add form content

--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -1,3 +1,8 @@
 <form>
-  Hello World!
+  <input
+    type="checkbox"
+    name="blockMouseMovement"
+    title="Block Token Movement Using Mouse Click/Drag"
+    {{checked blockMouseMovement}}
+  />
 </form>
