add submit button

--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -1,8 +1,10 @@
 <form>
+  <label for="blockMouseMovement">Block Mouse Click/Drag Token Movement</label>
   <input
     type="checkbox"
     name="blockMouseMovement"
-    title="Block Token Movement Using Mouse Click/Drag"
     {{checked blockMouseMovement}}
   />
+
+  <button type="submit"><i class="far fa-save"></i> Save Changes</button>
 </form>
