--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -6,5 +6,6 @@
     {{checked blockMouseMovement}}
   />
 
+  {{! TODO need to fix spacing here }}
   <button type="submit"><i class="far fa-save"></i> Save Changes</button>
 </form>
