update template with flexbox

--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -1,10 +1,12 @@
-<form>
-  <label for="blockMouseMovement">Block Mouse Click/Drag Token Movement</label>
-  <input
-    type="checkbox"
-    name="blockMouseMovement"
-    {{checked blockMouseMovement}}
-  />
+<form class="flexcol">
+  <div class="flexrow">
+    <label for="blockMouseMovement">Block Mouse Click/Drag Token Movement</label>
+    <input
+      type="checkbox"
+      name="blockMouseMovement"
+      {{checked blockMouseMovement}}
+    />
+  </div>
 
   {{! TODO need to fix spacing here }}
   <button type="submit"><i class="far fa-save"></i> Save Changes</button>
