add layout styles

--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -1,5 +1,5 @@
-<form class="flexcol">
-  <div class="flexrow">
+<form class="flexcol" style="gap: 0.5rem;">
+  <div class="flexrow" style="align-items: center;">
     <label for="blockMouseMovement">Block Mouse Click/Drag Token Movement</label>
     <input
       type="checkbox"
