--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -15,7 +15,7 @@
       name="gridlessMovementModifier"
       min="0"
       step="0.01"
-      {{value gridlessMovementModifier}}
+      value="{{gridlessMovementModifier}}"
     />
     <i
       class="fa-solid fa-circle-info"
