--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -11,6 +11,7 @@
     {{! TODO the labels bunch up weird }}
     <label for="gridlessMovementModifier">Gridless Movement Modifier</label>
     <input
+      class="flex-1"
       type="number"
       name="gridlessMovementModifier"
       min="0"
