add tooltip instead of title

--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -8,7 +8,6 @@
     />
   </div>
   <div class="movement-config-row">
-    {{! TODO the labels bunch up weird }}
     <label for="gridlessMovementModifier">Gridless Movement Modifier</label>
     <input
       class="flex-1"
@@ -20,7 +19,7 @@
     />
     <i
       class="fa-solid fa-circle-info"
-      title="Multiplier for the gridless movement steps when using arrow keys. Gridless movement defaults to moving in increments of the grid-size."
+      data-tooltip="Multiplier for the gridless movement steps when using arrow keys. Gridless movement defaults to moving in increments of the grid-size."
     ></i>
   </div>
 
