--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -1,11 +1,26 @@
 <form class="flexcol" style="gap: 0.5rem;">
-  <div class="flexrow" style="align-items: center;">
+  <div class="movement-config-row">
     <label for="blockMouseMovement">Block Mouse Click/Drag Token Movement</label>
     <input
       type="checkbox"
       name="blockMouseMovement"
       {{checked blockMouseMovement}}
     />
+  </div>
+  <div class="movement-config-row">
+    <label for="gridlessMovementModifier">Gridless Movement Modifier</label>
+    <input
+      class="flex-1"
+      type="number"
+      name="gridlessMovementModifier"
+      min="0"
+      step="0.01"
+      value="{{gridlessMovementModifier}}"
+    />
+    <i
+      class="fa-solid fa-circle-info"
+      data-tooltip="Multiplier for the gridless movement steps when using arrow keys. Gridless movement defaults to moving in increments of the grid-size."
+    ></i>
   </div>
 
   <button type="submit"><i class="far fa-save"></i> Save Changes</button>
