--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -1,7 +1,7 @@
 <form class="flexcol" style="gap: 0.5rem;">
   <div class="movement-config-row">
     <label for="blockMouseMovement">{{localize
-        TOKEN-MOVEMENT-SETTINGS.blockMouseMovementLabel
+        "TOKEN-MOVEMENT-SETTINGS.blockMouseMovementLabel"
       }}</label>
     <input
       type="checkbox"
@@ -11,7 +11,7 @@
   </div>
   <div class="movement-config-row">
     <label for="gridlessMovementModifier">{{localize
-        TOKEN-MOVEMENT-SETTINGS.gridlessMovementModifierLabel
+        "TOKEN-MOVEMENT-SETTINGS.gridlessMovementModifierLabel"
       }}</label>
     <input
       class="flex-1"
@@ -24,11 +24,11 @@
     <i
       class="fa-solid fa-circle-info"
       data-tooltip="{{localize
-        TOKEN-MOVEMENT-SETTINGS.gridlessMovementModifierTooltip
+        'TOKEN-MOVEMENT-SETTINGS.gridlessMovementModifierTooltip'
       }}"
     ></i>
   </div>
 
   <button type="submit"><i class="far fa-save"></i>
-    {{localize TOKEN-MOVEMENT-SETTINGS.saveChangesLabel}}</button>
+    {{localize "TOKEN-MOVEMENT-SETTINGS.saveChangesLabel"}}</button>
 </form>
