Add config option to template

--- a/templates/movement-settings.hbs
+++ b/templates/movement-settings.hbs
@@ -10,6 +10,10 @@
     />
   </div>
   <div class="movement-config-row">
+    <label for="allowCombatDragMovement">{{localize "TOKEN-MOVEMENT-SETTINGS.allowCombatDragMovementLabel"}}</label>
+    <input type="checkbox" name="allowCombatDragMovement" {{checked allowCombatDragMovement}} />
+  </div>
+  <div class="movement-config-row">
     <label for="gridlessMovementModifier">{{localize
         "TOKEN-MOVEMENT-SETTINGS.gridlessMovementModifierLabel"
       }}</label>
